--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js ",
-    "dev": "node index.js localhost 3080"
+    "start": "node index.js "
   },
   "keywords": [],
   "author": "",
